--- a/message-producer/src/main/resources/application.yml
+++ b/message-producer/src/main/resources/application.yml
@@ -10,8 +10,7 @@ spring:
    application:
       name: message-producer
    kafka:
-     bootstrap.servers: localhost:9092
-     polling.timeout: 10000
+     bootstrap-servers: localhost:9092
      producer:
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer  
